fixed changed input to textarea and allowed for word wrapping

--- a/src/components/CreateForum/index.module.css
+++ b/src/components/CreateForum/index.module.css
@@ -1,9 +1,14 @@
+.forum {
+  height: 100%;
+}
+
 .forum form {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   flex-direction: column;
   gap: 40px;
   width: 100%;
+  height: 100%;
   color: var(--font-colour);
 }
 
@@ -28,6 +33,16 @@
   border-radius: 6px;
 }
 
+.input > textarea {
+  resize: none;
+  height: 100%;
+  flex-grow: 1;
+}
+
+.input.textarea {
+  flex-grow: 1;
+}
+
 .forum form .input span {
   position: absolute;
   padding: 12px 24px;
@@ -40,7 +55,6 @@
 }
 
 .submit-btn {
-  width: 100%;
   height: 66px;
   border-radius: 6px;
   border: none;
@@ -48,6 +62,7 @@
   font-size: 20px;
   color: #ffffff;
   transition: 0.1s;
+  float: right;
 }
 
 .submit-btn:hover {
