--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -15,7 +15,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 6px;
-  padding: 25px;
+  padding: 40px;
 }
 
 .close-btn {
