--- a/src/pages/AIMentor/index.module.css
+++ b/src/pages/AIMentor/index.module.css
@@ -62,7 +62,7 @@
 .input-box {
   display: flex;
   width: 100%;
-  height: 112px;
+  height: max-content;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.04);
   border-radius: 6px;
   background: #FFFFFF;
@@ -71,34 +71,37 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
-  margin-top: 12px;
 }
 
 .options {
   height: 64px;
   width: 64px;
   background: black;
+  align-self: end;
 }
 
 .input-form {
   width: 94%;
-  height: 64px;
- 
+  height: max-content;
 }
 
 .input {
   position: relative;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .input-bar {
   width: 100%;
-  height: 100%;
+  height: 65px;
   border-radius: 6px;
   border: none;
   padding: 18px 19px;
   font-size: 24px;
+  resize: none;
 }
 
 .input-bar:focus {
@@ -106,8 +109,6 @@
 }
 
 .submit {
-  position: absolute;
-  right: 6px;
-  top: 50%;
-  transform: translateY(-50%);
+  height: 65px !important;
+  align-self: end;
 }
